--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
   "dependencies": {
     "atomic-validator": "^1.0.2",
     "axios": "^1.3.4",
+    "cesium": "^1.117.0",
     "pinia": "^2.0.33",
     "pinia-plugin-persistedstate": "^3.1.0",
     "qs": "^6.11.1",
+    "shp": "^0.0.1",
     "store2": "^2.14.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/cesium": "^1.70.0",
     "@types/node": "^18.15.5",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
