--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ dist
 dist-ssr
 *.local
 .eslintcache
-public/Cesium-1.117
+public/libs/Cesium-1.117
 
 # Editor directories and files
 # .vscode/*
